--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1034,6 +1034,22 @@ main {
   margin-left: -650px;
 }
 
+.close-button-comment {
+  width: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50px;
+  background-color: transparent;
+  font-weight: bold;
+  font-size: 20px;
+  padding: 0;
+  color: black;
+  border-color: transparent;
+  margin-top: 5px;
+  margin-left: -650px;
+}
+
 .create-post-image-container {
   width: 100%;
   max-height: 200px;
@@ -1717,8 +1733,7 @@ main {
 }
 
 .alert-group-post-button {
-  background-color: #2c2b2b;
-  color: whitesmoke;
+  background-color: transparent;
 }
 
 .group-post-button>img,
